fix: robust CORS - remove duplicate CorsConfig, add CorsFilter at highest precedence, permit OPTIONS preflight